--- a/webroot/skin/frontend/blueacorn/mis/scss/module/_catalog-product.scss
+++ b/webroot/skin/frontend/blueacorn/mis/scss/module/_catalog-product.scss
@@ -284,7 +284,6 @@
 
             .message {
                 line-height: 24px;
-                margin-bottom: 13px;
                 font-size: 13px;
             }
 
@@ -294,6 +293,7 @@
                 width: 60%;
                 box-sizing: border-box;
                 height: 41px;
+                margin-top: 13px;
             }
 
             button.button {
@@ -309,6 +309,7 @@
                 font-size: 15px;
                 letter-spacing: 1px;
                 line-height: 23px;
+                margin-top: 13px;
             }
 
             .phone-number {
